syntax = "proto3";

package messages;

enum ErrorCode {
  UNKNOWN = 0;
  INVALID_PAYLOAD = 1;
  UNIMPLEMENTED = 2;
}

message Error {
  required string msg = 1;
  required ErrorCode code = 2;
}

message LoginRequest {
  required string username = 1;
  required string password = 2;
}

message LoginResponse {
  required string token = 2;
}
